k8s/yams/network.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql
  annotations:
    config.kubernetes.io/depends-on:
      "Deployment/mysql"
spec:
  selector:
    app: mysql
  ports:
    - port: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: php
  annotations:
    config.kubernetes.io/depends-on:
      "Deployment/php"
spec:
  selector:
    app: php
  ports:
    - port: 9000

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    config.kubernetes.io/depends-on:
      "Deployment/nginx"
spec:
  selector:
    app: nginx
  ports:
    - port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitrix-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m" # __POST_SIZE_VALUE__
    nginx.ingress.kubernetes.io/client-body-buffer-size: "8m" # __POST_SIZE_VALUE__
    nginx.ingress.kubernetes.io/proxy-read-timeout: "888" # __TIMEOUT_VALUE__
    nginx.ingress.kubernetes.io/proxy-send-timeout: "888" # __TIMEOUT_VALUE__
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "8" # __TIMEOUT_VALUE__
    config.kubernetes.io/depends-on:
      "Service/nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: bitrix.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
